fix beastie select name alignment

--- a/src/shared/Shared.module.css
+++ b/src/shared/Shared.module.css
@@ -307,6 +307,7 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
+  text-align: center;
 }
 
 .beastieSelect {
